fix shifting contents slightly after header when opening/closing mobile menu

--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2.8rem 1.6rem 0;
-  margin-bottom: 3.2rem;
+  padding: 0 1.6rem;
+  margin: 2.8rem auto 3.2rem;
+  height: 3rem;
 }
 
 header .logo {
